--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <main>
+      <div id="sketch-container"></div>
+      <div id="gui-container"></div>
     </main>
     <script src="javascript/sketch.js"></script>
   </body>
